# ibc-solo-machine

./: .gitignore  Cargo.toml
proto/confio/: proofs.proto
proto/cosmos/base/query/v1beta1/: pagination.proto
proto/cosmos/crypto/ed25519/: keys.proto
proto/cosmos/crypto/multisig/: keys.proto
proto/cosmos/crypto/secp256r1/: keys.proto
proto/cosmos/tx/signing/v1beta1/: signing.proto
proto/cosmos/upgrade/v1beta1/: upgrade.proto
proto/ibcgo/apps/transfer/v1/: genesis.proto  query.proto
proto/ibcgo/core/client/v1/: genesis.proto  query.proto  tx.proto
proto/tendermint/types/: types.proto
proto/tendermint/version/: types.proto
src/: client_state.rs  consensus_state.rs  header.rs  lib.rs  misbehaviour.rs  proto.rs  signature_and_data.rs
src/ics/: mod.rs
src/ics/client_semantics/: client_state.rs  consensus_state.rs  mod.rs  validation.rs
src/ics/core/: bit_array.rs  crypto.rs  hash_validation.rs  height.rs  identifier_validation.rs  mod.rs
src/ics/solo_machine_client/: client_state.rs  consensus_state.rs  header.rs  misbehaviour.rs  mod.rs  sign_bytes.rs  signature_and_data.rs
src/ics/tendermint_client/: consensus_state.rs  header.rs  mod.rs
src/relayer/chain/: mod.rs  solo.rs  tendermint.rs
src/solo_machine/: mod.rs
